2014-09-04  Hale Wang  <hale.wang@arm.com>

	* libc/machine/arm/aeabi_memcpy.c: New file.
	* libc/machine/arm/aeabi_memcpy-armv7a.S: New file.
	* libc/machine/arm/Makefile.am: Add dependencies.
	* libc/machine/arm/Makefile.in: Regenerated.

2014-08-27  DJ Delorie  <dj@redhat.com>

	* libc/include/math.h (frexpl): Remove parameter name.

2014-08-19  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/aarch64/memchr.S: Add check for zero-sized buffer.

2014-08-18 Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/signal.h: Declare sigaltstack for RTEMS only.

2014-08-18  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/sys/config.h[__m68k__]: Set _READ_WRITE_RETURN_TYPE
	to _ssize_t to match underlying code in libgloss.

2014-08-18 Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/string.h: Improve language and OS standard guards.

2014-08-18 Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/sys/signal.h: Add sigaltstack() support.

2014-08-14  Bin Cheng  <bin.cheng@arm.com>

	* libc/stdio/findfp.c (std): Don't inline when optimizing for code size.

2014-08-04  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* libc/include/math.h: Also define M_PI etc. if _XOPEN_SOURCE is
	defined appropriately.

2014-08-01  Eric Blake  <eblake@redhat.com>

	* libc/machine/spu/spu_timer_internal.h: Decorate attribute names
	with __, for namespace safety.
	* libc/machine/xscale/machine/profile.h: Likewise.
	* libc/include/stdlib.h: Likewise.
	* libc/include/_ansi.h: Likewise.
	* libc/include/sys/unistd.h: Likewise.
	* libc/sys/linux/linuxthreads/libc-symbols.h: Likewise.
	* libc/sys/linux/linuxthreads/internals.h: Likewise.
	* libc/sys/linux/machine/i386/weakalias.h: Likewise.
	* libc/sys/linux/machine/i386/dl-procinfo.h: Likewise.
	* libc/sys/linux/machine/i386/dl-machine.h: Likewise.
	* libc/sys/linux/libc-symbols.h: Likewise.
	* libc/sys/linux/iconv/gconv_charset.h: Likewise.
	* libc/sys/linux/include/resolv.h: Likewise.